--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,10 @@
 #           GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
 name: Jekyll Deploy
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -46,3 +49,13 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gems-
+      - name: validate-bio-json-file
+        uses: limitusus/json-syntax-check@v1
+        with:
+          pattern: "\\bio.json$"
+      - name: Build & Deploy to GitHub Pages
+        uses: joshlarsen/jekyll4-deploy-gh-pages@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
+          GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
