--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,3 @@
-# name: Jekyll Deploy
-#
-# on:
-#   push:
-#     branches:
-#       - main
-#
-# jobs:
-#
-#   build_and_deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: GitHub Checkout
-#         uses: actions/checkout@v1
-#       - name: Bundler Cache
-#         uses: actions/cache@v4
-#         with:
-#           path: vendor/bundle
-#           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-#           restore-keys: |
-#             ${{ runner.os }}-gems-
-#       - name: validate-bio-json-file
-#         uses: limitusus/json-syntax-check@v1
-#         with:
-#           pattern: "\\bio.json$"
-#       - name: Build & Deploy to GitHub Pages
-#         uses: joshlarsen/jekyll4-deploy-gh-pages@master
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#           GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
-#           GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
 name: Jekyll Deploy
 
 on:
@@ -37,22 +6,23 @@ on:
       - main
 
 jobs:
-  build:
+
+  build_and_deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Jekyll Deploy
-      uses: actions/cache@v4
-          # path: vendor/bundle
+      # - name: GitHub Checkout
+      #   uses: actions/checkout@v1
+      - name: Bundler Cache
+        uses: actions/cache@v4
+        with:
+          path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gems-
-      - name: validate-bio-json-file
-        uses: limitusus/json-syntax-check@v1
-        with:
-          pattern: "\\bio.json$"
+      # - name: validate-bio-json-file
+      #   uses: limitusus/json-syntax-check@v1
+      #   with:
+      #     pattern: "\\bio.json$"
       - name: Build & Deploy to GitHub Pages
         uses: joshlarsen/jekyll4-deploy-gh-pages@master
         env:
