--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,17 @@ on:
       - main
 
 jobs:
-
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      # - name: GitHub Checkout
-      #   uses: actions/checkout@v1
+      - name: GitHub Checkout
+        uses: actions/checkout@v1
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1' # Or whatever version your project uses
+
       - name: Bundler Cache
         uses: actions/cache@v4
         with:
@@ -19,13 +24,52 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gems-
-      # - name: validate-bio-json-file
-      #   uses: limitusus/json-syntax-check@v1
-      #   with:
-      #     pattern: "\\bio.json$"
+
+      - name: Install Dependencies
+        run: |
+          gem install bundler
+          bundle install --path vendor/bundle
+
+      - name: Validate bio.json file
+        uses: limitusus/json-syntax-check@v1
+        with:
+          pattern: "\\bio.json$"
+
       - name: Build & Deploy to GitHub Pages
         uses: joshlarsen/jekyll4-deploy-gh-pages@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
           GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
+
+# name: Jekyll Deploy
+#
+# on:
+#   push:
+#     branches:
+#       - main
+#
+# jobs:
+#
+#   build_and_deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: GitHub Checkout
+#         uses: actions/checkout@v1
+#       - name: Bundler Cache
+#         uses: actions/cache@v4
+#         with:
+#           path: vendor/bundle
+#           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+#           restore-keys: |
+#             ${{ runner.os }}-gems-
+#       - name: validate-bio-json-file
+#         uses: limitusus/json-syntax-check@v1
+#         with:
+#           pattern: "\\bio.json$"
+#       - name: Build & Deploy to GitHub Pages
+#         uses: joshlarsen/jekyll4-deploy-gh-pages@master
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
+#           GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
