--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,38 +9,27 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: GitHub Checkout
-        uses: actions/checkout@v1
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1' # Or whatever version your project uses
+          ruby-version: '3.1'  # Or the version you need
+          bundler-cache: true  # Automatically uses and caches your Gemfile.lock
 
-      - name: Bundler Cache
-        uses: actions/cache@v4
+      - name: Install dependencies
+        run: bundle install
+
+      - name: Build the Jekyll site
+        run: bundle exec jekyll build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./_site
 
-      - name: Install Dependencies
-        run: |
-          gem install bundler
-          bundle install --path vendor/bundle
-
-      - name: Validate bio.json file
-        uses: limitusus/json-syntax-check@v1
-        with:
-          pattern: "\\bio.json$"
-
-      - name: Build & Deploy to GitHub Pages
-        uses: joshlarsen/jekyll4-deploy-gh-pages@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
-          GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
 
 # name: Jekyll Deploy
 #
