--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,19 +9,22 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'  # Or the version you need
-          bundler-cache: true  # Automatically uses and caches your Gemfile.lock
+          ruby-version: '3.1'
+          bundler-cache: true
 
       - name: Install dependencies
         run: bundle install
 
-      - name: Build the Jekyll site
+      - name: Show installed gems (debug)
+        run: gem list
+
+      - name: Build the Jekyll site (debug)
         run: bundle exec jekyll build
 
       - name: Deploy to GitHub Pages
@@ -29,6 +32,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
+
 
 
 # name: Jekyll Deploy
